@@ -20,6 +20,9 @@
 <dt>Complexity</dt>
 <dd>Average McCabe's cyclomatic code complexity for all methods.  This is basically a count of the number of different code paths in a method (incremented by 1 for each if statement, while loop, etc.)</dd>
 
+<dt>N/A</dt>
+<dd>Line coverage and branch coverage will appear as "Not Applicable" when Cobertura can not find line number information in the .class file.  This happens for stub and skeleton classes, interfaces, or when the class was not compiled with "debug=true."</dd>
+
 </dl>
 
 </body>
